<resources>
    <string name="app_name">GlobeQuiz</string>
    <string name="log_tag">globequiz</string>
    <string name="version">Version 1.14</string>
    <string name="single_player">Start Game</string>
    <string name="multi_player">Multiplayer</string>
    <string name="globe_button_label">Globe</string>
    <string name="settings">Settings</string>
    <string name="start_single_player">Start game</string>
    <string name="select_questions">Select Questions</string>
    <string name="select_regions">Select Regions</string>
    <string name="number_of_questions">Number of Questions</string>
    <string name="logo_description">Logo showing pictogram of a globe</string>
    <string name="map_description">Map indicating the location of the country</string>
    <string name="level_too_low_format">You have to reach level %d to select this option.</string>
    <string name="progress_format">%1$d of %2$d</string>
    <string name="too_many_countries_format">Selected continents contain only %d countries</string>
    <string name="select_a_question">Select at least one question</string>
    <string name="select_a_region">Select at least one region</string>
    <string name="next_question">Next question</string>
    <string name="next_country">Next country</string>
    <string name="next_score">Show score</string>
    <string name="not_enough_questions">Sorry, there are no questions of these types for the selected continents.</string>
    <string name="score_label">Score</string>
    <string name="back_to_menu">Menu</string>
    <string name="score_number_format">%1$d of %2$d answers correct - %3$.02f%%</string>
    <string name="score_experience_gained_format">%1$d XP earned</string>
    <string name="score_experience_format">%1$d of %2$d XP to level %3$d</string>
    <string name="player_name_format">Player: %1$s</string>
    <string name="player_experience_format">"Level %1$d - %2$d/%3$d XP</string>
    <string name="evaluation1">Did you even try?</string>
    <string name="evaluation2">You can tell east from west</string>
    <string name="evaluation3">Average</string>
    <string name="evaluation4">Quite good</string>
    <string name="evaluation5">Impressive</string>
    <string name="evaluation6">Flawless</string>
    <string name="abort_game_warning">End the game?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="please_enter_name">Please enter a name.</string>
    <string name="player_already_exists">The player name already exists. Please enter another name.</string>
    <string name="select_player">Select Player</string>
    <string name="create_player">Create Player</string>
    <string name="enter_player_name">Player name:</string>
    <string name="create">Create</string>
    <string name="default_player_name">GeoWizz9000</string>
    <string name="remove_player_warning">Do you really want to delete player %1$s and loose all progress?</string>
    <string name="language">Language:</string>
    <string name="language_flag_description">Picture of a flag</string>
    <string name="select_player_button">Change player</string>
    <string name="wiki_button_description">Opens Wikipedia</string>
    <string name="info_format">%1$s\nCapital: %2$s</string>
    <string name="info_format_no_capital">%1$s</string>
    <string name="about_button">About</string>
    <string name="license_text_label">Licenses</string>
    <string name="author_text_label">by Thorsten Schimannek</string>
    <string name="email_text_label">globequiz.contact@gmail.com</string>
    <string name="libpng_license_formatted" translatable="false"><![CDATA[
COPYRIGHT NOTICE, DISCLAIMER, and LICENSE<br>
=========================================<br>
<br>
PNG Reference Library License version 2<br>
---------------------------------------<br>
<br>
 * Copyright (c) 1995-2019 The PNG Reference Library Authors.<br>
 * Copyright (c) 2018-2019 Cosmin Truta.<br>
 * Copyright (c) 2000-2002, 2004, 2006-2018 Glenn Randers-Pehrson.<br>
 * Copyright (c) 1996-1997 Andreas Dilger.<br>
 * Copyright (c) 1995-1996 Guy Eric Schalnat, Group 42, Inc.<br>
<br>
The software is supplied "as is", without warranty of any kind, express or implied, including, without limitation, the warranties of merchantability, fitness for a particular purpose, title, and non-infringement.  In no event shall the Copyright owners, or anyone distributing the software, be liable for any damages or other liability, whether in contract, tort or otherwise, arising from, out of, or in connection with the software, or the use or other dealings in the software, even if advised of the possibility of such damage.<br>
<br>
Permission is hereby granted to use, copy, modify, and distribute this software, or portions hereof, for any purpose, without fee, subject to the following restrictions:<br>
<br>
 1. The origin of this software must not be misrepresented; you must not claim that you wrote the original software.  If you use this software in a product, an acknowledgment in the product documentation would be appreciated, but is not required.<br>
<br>
 2. Altered source versions must be plainly marked as such, and must not be misrepresented as being the original software.<br>
<br>
 3. This Copyright notice may not be removed or altered from any source or altered source distribution.<br>
<br>
<br>
PNG Reference Library License version 1 (for libpng 0.5 through 1.6.35)<br>
-----------------------------------------------------------------------<br>
<br>
libpng versions 1.0.7, July 1, 2000, through 1.6.35, July 15, 2018 are Copyright (c) 2000-2002, 2004, 2006-2018 Glenn Randers-Pehrson, are derived from libpng-1.0.6, and are distributed according to the same disclaimer and license as libpng-1.0.6 with the following individuals added to the list of Contributing Authors:<br>
<br>
    Simon-Pierre Cadieux<br>
    Eric S. Raymond<br>
    Mans Rullgard<br>
    Cosmin Truta<br>
    Gilles Vollant<br>
    James Yu<br>
    Mandar Sahastrabuddhe<br>
    Google Inc.<br>
    Vadim Barkov<br>
<br>
and with the following additions to the disclaimer:<br>
<br>
    There is no warranty against interference with your enjoyment of the library or against infringement.  There is no warranty that our efforts or the library will fulfill any of your particular purposes or needs.  This library is provided with all faults, and the entire risk of satisfactory quality, performance, accuracy, and effort is with the user.<br>
<br>
Some files in the "contrib" directory and some configure-generated files that are distributed with libpng have other copyright owners, and are released under other open source licenses.<br>
<br>
libpng versions 0.97, January 1998, through 1.0.6, March 20, 2000, are Copyright (c) 1998-2000 Glenn Randers-Pehrson, are derived from libpng-0.96, and are distributed according to the same disclaimer and license as libpng-0.96, with the following individuals added to the list of Contributing Authors:<br>
<br>
    Tom Lane<br>
    Glenn Randers-Pehrson<br>
    Willem van Schaik<br>
<br>
libpng versions 0.89, June 1996, through 0.96, May 1997, are Copyright (c) 1996-1997 Andreas Dilger, are derived from libpng-0.88, and are distributed according to the same disclaimer and license as libpng-0.88, with the following individuals added to the list of Contributing Authors:<br>
<br>
    John Bowler<br>
    Kevin Bracey<br>
    Sam Bushell<br>
    Magnus Holmgren<br>
    Greg Roelofs<br>
    Tom Tanner<br>
<br>
Some files in the "scripts" directory have other copyright owners, but are released under this license.<br>
<br>
libpng versions 0.5, May 1995, through 0.88, January 1996, are Copyright (c) 1995-1996 Guy Eric Schalnat, Group 42, Inc.<br>
<br>
For the purposes of this copyright and license, "Contributing Authors" is defined as the following set of individuals:<br>
<br>
    Andreas Dilger<br>
    Dave Martindale<br>
    Guy Eric Schalnat<br>
    Paul Schmidt<br>
    Tim Wegner<br>
<br>
The PNG Reference Library is supplied "AS IS".  The Contributing Authors and Group 42, Inc. disclaim all warranties, expressed or implied, including, without limitation, the warranties of merchantability and of fitness for any purpose.  The Contributing Authors and Group 42, Inc. assume no liability for direct, indirect, incidental, special, exemplary, or consequential damages, which may result from the use of the PNG Reference Library, even if advised of the possibility of such damage.<br>
<br>
Permission is hereby granted to use, copy, modify, and distribute this source code, or portions hereof, for any purpose, without fee, subject to the following restrictions:<br>
<br>
 1. The origin of this source code must not be misrepresented.<br>
<br>
 2. Altered versions must be plainly marked as such and must not be misrepresented as being the original source.<br>
<br>
 3. This Copyright notice may not be removed or altered from any source or altered source distribution.<br>
<br>
The Contributing Authors and Group 42, Inc. specifically permit, without fee, and encourage the use of this source code as a component to supporting the PNG file format in commercial products.  If you use this source code in a product, acknowledgment is not required but would be appreciated.<br>
    ]]></string>
    <string name="show_relief">Show relief:</string>
</resources>