<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/configurationLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fragment_background"
    android:orientation="vertical"
    tools:context=".fragments.FragmentStartGame">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/selectQuestionsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center_horizontal"
        android:text="@string/select_questions"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/questionsListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5" />

    <TextView
        android:id="@+id/selectContinentTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_weight="0"
        android:gravity="center_horizontal"
        android:text="@string/select_regions"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/regionsListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:choiceMode="multipleChoice" />

    <TextView
        android:id="@+id/selectNumberOfQuestionsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_weight="0"
        android:gravity="center_horizontal"
        android:text="@string/number_of_questions"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/numberOfQuestionsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:minEms="2"
            android:text="TextView" />

        <SeekBar
            android:id="@+id/numberOfQuestionsSeekBar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:max="8"
            android:progress="2" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <Button
        android:id="@+id/startSinglePlayerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0"
        android:background="@drawable/button_background"
        android:lines="1"
        android:minHeight="0dp"
        android:text="@string/start_single_player" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

</LinearLayout>